# inspection_interfaces

./: CMakeLists.txt  package.xml
action/: CaptureMedia.action  CenterGimbalAndCapture.action
msg/: EventField.msg  LocalizationInitStatus.msg  PlatformEvent.msg  RouteStatus.msg  TaskReport.msg  TaskState.msg
srv/: GetStatus.srv  LocalPlannerConfigure.srv  NavigationTask.srv  StartRoute.srv  ValidateRouteWaypoints.srv
